# CASMcode_crystallography

./: .cirrus.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTE.md  README.md  build_requirements.txt  configure.ac  make_CMakeLists.py  make_Makemodule.py  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  test-linux-build.yml  test-linux-cxx-only.yml  test-linux-dependencies.yml  test-linux-source.yml  test-linux.yml  test-macos-build.yml
doc/: doxygen_config
include/casm/crystallography/: BasicStructureTools.hh  SimpleStructureTools.hh
include/casm/crystallography/io/: BasicStructureIO.hh
python/: LICENSE  README.md  SUMMARY.md  doc_requirements.txt  pyproject.toml  setup.cfg  setup.py
python/doc/: about.rst  conf.py  index.rst  installation.rst  refs.bib  usage.rst
python/doc/_static/css/: custom.css
python/doc/examples/prim/: coupled.rst  disp.rst  index.rst  magspin.rst  occ.rst  strain.rst
python/doc/examples/prim/json/: ZrO_prim.json  simple_cubic_GLstrain.json  simple_cubic_GLstrain_symadapted.json
python/doc/reference/casm/xtal/: index.rst
python/doc/reference/libcasm/xtal/: index.rst
python/doc/usage/: lattice.rst  prim.rst  structure.rst  superlattice.rst
python/examples/prim/: ZrO_prim.py  simple_cubic_GLstrain.py  simple_cubic_GLstrain_symadapted.py  simple_cubic_Hstrain.py  simple_cubic_Hstrain_symadapted.py  simple_cubic_SOmagspin.py  simple_cubic_binary.py  simple_cubic_coupled.py  simple_cubic_disp.py  simple_cubic_ising.py
python/libcasm/xtal/: __init__.py  _methods.py  cluster_point_group.py  lattices.py  prims.py  structures.py
python/libcasm/xtal/convert/: __init__.py  pymatgen.py
python/src/: xtal.cpp
python/tests/: conftest.py  test_cluster_point_group.py  test_dofsetbasis.py  test_enumerate_superlattices.py  test_integral_site_coordinate.py  test_lattice.py  test_lattices.py  test_methods.py  test_occupants.py  test_prim.py  test_prims.py  test_siteindexconverter.py  test_strainconverter.py  test_structure.py  test_structures.py  test_syminfo.py  test_symop.py  test_unitcellindexconverter.py
python/tests/convert/: test_pymatgen.py
python/tests/data/input_molecules/: ammonia.xyz  benzene.xyz  c60.xyz  ethane.xyz  square.xyz  water.xyz
src/casm/crystallography/: AnisoValTraits.cc  BasicStructure.cc  BasicStructureTools.cc  Lattice.cc  SimpleStructureTools.cc  Site.cc  SymType.cc  version.cc
src/casm/crystallography/io/: BasicStructureIO.cc
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/unit/: Common.cpp  Common.hh
tests/unit/crystallography/: BasicStructureTools_test.cpp  BasicStructure_test.cpp  Niggli_test.cpp  SimpleStructure_test.cpp  SymInfo_test.cpp  UnitCellCoord_test.cpp  current_test_results.json  version_test.cpp
